--- a/Reflector/Reflector.csproj
+++ b/Reflector/Reflector.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Reflector.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Request.cs" />
+    <Compile Include="tmp.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
