--- a/ReflectorExample/ReflectorExample.csproj
+++ b/ReflectorExample/ReflectorExample.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Sources\ReflectorField.cs" />
     <Compile Include="Sources\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
